--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
     />
-    <title>Artem Petrovskyi | Portfolio</title>
+    <title>Artem Petrovskyi | Web developer</title>
   </head>
   <body>
     <div id="root" class="wrapper"></div>
