--- a/index.html
+++ b/index.html
@@ -2,18 +2,63 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Frontend Developer projects, skills, and contact information. Showcasing modern web design and development work."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://artpetrovskyi.github.io/portfolio/"
+    />
+    <meta property="og:title" content="Artem Petrovskyi | Frontend Developer" />
+    <meta
+      property="og:description"
+      content="Frontend Developer projects, skills, and contact information. Showcasing modern web design and development work."
+    />
+    <meta
+      property="og:image"
+      content="https://artpetrovskyi.github.io/portfolio/preview.jpg"
+    />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="628" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:url"
+      content="https://artpetrovskyi.github.io/portfolio/"
+    />
+    <meta
+      name="twitter:title"
+      content="Artem Petrovskyi | Frontend Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="Frontend Developer projects, skills, and contact information. Showcasing modern web design and development work."
+    />
+    <meta
+      name="twitter:image"
+      content="https://artpetrovskyi.github.io/portfolio/images/preview.jpg"
+    />
+
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
     />
+
     <title>Artem Petrovskyi | Web developer</title>
   </head>
   <body>
